add animations and transitions to navBar, hero button and social icons

--- a/assets/pages/aboutMe.html
+++ b/assets/pages/aboutMe.html
@@ -25,7 +25,7 @@
                     <li class="nav__item">Youtube</li>
                 </a>
                 <a href="./aboutMe.html">
-                    <li class="nav__item">About</li>
+                    <li class="nav__item active">About</li>
                 </a>
                 <a href="./portfolio.html">
                     <li class="nav__item">Portfolio</li>
