--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -29,7 +29,7 @@
                     <li class="nav__item">About</li>
                 </a>
                 <a href="./portfolio.html">
-                    <li class="nav__item">Portfolio</li>
+                    <li class="nav__item active">Portfolio</li>
                 </a>
                 <a href="./contactMe.html">
                     <li class="nav__item">Contact</li>
