--- a/assets/pages/youtube.html
+++ b/assets/pages/youtube.html
@@ -23,7 +23,7 @@
                     <li class="nav__item">Home</li>
                 </a>
                 <a href="./youtube.html">
-                    <li class="nav__item">Youtube</li>
+                    <li class="nav__item active">Youtube</li>
                 </a>
                 <a href="./aboutMe.html">
                     <li class="nav__item">About</li>
