--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </picture>
             <ul class="nav__list">
                 <a href="./index.html">
-                    <li class="nav__item">Home</li>
+                    <li class="nav__item active">Home</li>
                 </a>
                 <a href="assets/pages/youtube.html">
                     <li class="nav__item">Youtube</li>
