--- a/assets/pages/contactMe.html
+++ b/assets/pages/contactMe.html
@@ -32,7 +32,7 @@
                     <li class="nav__item">Portfolio</li>
                 </a>
                 <a href="./contactMe.html">
-                    <li class="nav__item">Contact</li>
+                    <li class="nav__item active">Contact</li>
                 </a>
             </ul>
         </nav>
