fix the root of images

--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -45,15 +45,15 @@
             <div class="portfolio__subContainer">
                 <section class="portfolio__container">
                     <p class="portfolio__type">React js</p>
-                    <img src="/assets/images/project.jpg" alt="project image">
-                    <img src="/assets/images/project.jpg" alt="project image">
-                    <img src="/assets/images/project.jpg" alt="project image">
+                    <img src="../images/project.jpg" alt="project image">
+                    <img src="../images/project.jpg" alt="project image">
+                    <img src="../images/project.jpg" alt="project image">
                 </section>
                 <section class="portfolio__container">
                     <p class="portfolio__type">Bootstrap v5</p>
-                    <img src="/assets/images/project.jpg" alt="project image">
-                    <img src="/assets/images/project.jpg" alt="project image">
-                    <img src="/assets/images/project.jpg" alt="project image">
+                    <img src="../images/project.jpg" alt="project image">
+                    <img src="../images/project.jpg" alt="project image">
+                    <img src="../images/project.jpg" alt="project image">
                 </section>
             </div>
             <a href="#" class="portfolio__btn">See All</a>
