--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="index">
         <nav class="nav">
             <picture class="nav__logo">
-                <a href="./index.html"><img src="assets/images/mainLogo.png" alt=""></a>
+                <a href="./index.html"><img src="./assets/images/mainLogo.png" alt="brand logo"></a>
             </picture>
             <ul class="nav__list">
                 <a href="./index.html">
@@ -56,10 +56,10 @@
     <aside class="index">
         <section class="socials">
             <a href="https://www.linkedin.com/in/antonio-de-jesus-del-hierro-montes-0635a8208/" target="_blank"> <img
-                    src="/assets/icons/logotipo-de-linkedin.png" alt="linkedin icon" class="social__icon"></a>
+                    src="./assets/icons/logotipo-de-linkedin.png" alt="linkedin icon" class="social__icon"></a>
             <a href="https://www.linkedin.com/in/antonio-de-jesus-del-hierro-montes-0635a8208/" target="_blank"><img
-                    src="/assets/icons/github.png" alt="github icon" class="social__icon"></a>
-            <a href="#"><img src="/assets/icons/instagram.png" alt="instagram icon" class="social__icon"></a>
+                    src="./assets/icons/github.png" alt="github icon" class="social__icon"></a>
+            <a href="#"><img src="./assets/icons/instagram.png" alt="instagram icon" class="social__icon"></a>
 
         </section>
     </aside>
@@ -68,7 +68,7 @@
     <footer class="index">
         <section class="footer">
             <picture class="footer__logo">
-                <a href="./index.html"><img src="assets/images/mainLogo.png" alt="brand logo"></a>
+                <a href="./index.html"><img src="./assets/images/mainLogo.png" alt="brand logo"></a>
             </picture>
             <div class="footer__copy">
                 <p class="copy">© roadtodev 2022</p>
