--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/20515f5324.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon">
+    <!-- bootstrap v5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Road To Dev</title>
 </head>
@@ -40,25 +43,72 @@
     </header>
     <main class="portfolio">
         <!-- portfolio start -->
-        <section class="portfolio__mainContainer">
-            <h1 class="porfolio__title">My experience</h1>
-            <div class="portfolio__subContainer">
-                <section class="portfolio__container">
-                    <p class="portfolio__type">React js</p>
-                    <img src="../images/project.jpg" alt="project image">
-                    <img src="../images/project.jpg" alt="project image">
-                    <img src="../images/project.jpg" alt="project image">
-                </section>
-                <section class="portfolio__container">
-                    <p class="portfolio__type">Bootstrap v5</p>
-                    <img src="../images/project.jpg" alt="project image">
-                    <img src="../images/project.jpg" alt="project image">
-                    <img src="../images/project.jpg" alt="project image">
-                </section>
+        <div class="container portfolio__container px-5">
+            <div class="row">
+                <div class="col-12 col-md-4 py-5">
+                    <div class="card">
+                        <img src="../images/project.jpg" class="card-img-top" alt="project image">
+                        <div class="card-body">
+                            <h5 class="card-title">React JS</h5>
+                            <p class="card-text">Project created with for a Start Up</p>
+                            <a href="#" class="btn btn-secondary">Github</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 py-5">
+                    <div class="card">
+                        <img src="../images/project.jpg" class="card-img-top" alt="project image">
+                        <div class="card-body">
+                            <h5 class="card-title">React JS</h5>
+                            <p class="card-text">Project created with for a Start Up</p>
+                            <a href="#" class="btn btn-secondary">Github</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 py-5">
+                    <div class="card">
+                        <img src="../images/project.jpg" class="card-img-top" alt="project image">
+                        <div class="card-body">
+                            <h5 class="card-title">React JS</h5>
+                            <p class="card-text">Project created with for a Start Up</p>
+                            <a href="#" class="btn btn-secondary">Github</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-4 py-5">
+                        <div class="card">
+                            <img src="../images/project.jpg" class="card-img-top" alt="project image">
+                            <div class="card-body">
+                                <h5 class="card-title">React JS</h5>
+                                <p class="card-text">Project created with for a Start Up</p>
+                                <a href="#" class="btn btn-secondary">Github</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 py-5">
+                        <div class="card">
+                            <img src="../images/project.jpg" class="card-img-top" alt="project image">
+                            <div class="card-body">
+                                <h5 class="card-title">React JS</h5>
+                                <p class="card-text">Project created with for a Start Up</p>
+                                <a href="#" class="btn btn-secondary">Github</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 py-5">
+                        <div class="card">
+                            <img src="../images/project.jpg" class="card-img-top" alt="project image">
+                            <div class="card-body">
+                                <h5 class="card-title">React JS</h5>
+                                <p class="card-text">Project created with for a Start Up</p>
+                                <a href="#" class="btn btn-secondary">Github</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <a href="#" class="portfolio__btn">See All</a>
-        </section>
-        <!-- portfolio end -->
+            <!-- portfolio end -->
     </main>
     <!-- footer start -->
     <footer class="index">
@@ -72,6 +122,11 @@
         </section>
     </footer>
     <!-- footer end -->
+
+    <!-- bootstrap v5 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
