--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/20515f5324.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
+    <!-- bootstrap v5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css" />
     <title>Road To Dev</title>
 </head>
@@ -14,27 +17,34 @@
 <body class="index">
     <!-- header start -->
     <header class="index">
-        <nav class="nav">
-            <picture class="nav__logo">
-                <a href="./index.html"><img src="./assets/images/mainLogo.png" alt="brand logo"></a>
-            </picture>
-            <ul class="nav__list">
-                <a href="./index.html">
-                    <li class="nav__item active">Home</li>
-                </a>
-                <a href="assets/pages/youtube.html">
-                    <li class="nav__item">Youtube</li>
-                </a>
-                <a href="assets/pages/aboutMe.html">
-                    <li class="nav__item">About</li>
-                </a>
-                <a href="assets/pages/portfolio.html">
-                    <li class="nav__item">Portfolio</li>
-                </a>
-                <a href="assets/pages/contactMe.html">
-                    <li class="nav__item">Contact</li>
-                </a>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark nav">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"> <img src="./assets/images/mainLogo.png" alt="brand logo"
+                        class="nav__logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./assets/pages/youtube.html">Youtube</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./assets/pages/aboutMe.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./assets/pages/portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./assets/pages/contactMe.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <!-- header ends -->
@@ -76,6 +86,10 @@
         </section>
     </footer>
     <!-- footer ends -->
+    <!-- bootstrap v5 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
