add Bootstrap to all pages and fix overwritten styles

--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -17,27 +17,34 @@
 <body>
     <header class="index">
         <!-- nav start -->
-        <nav class="nav">
-            <picture class="nav__logo">
-                <a href="../../index.html"><img src="../images/mainLogo.png" alt="brand logo"></a>
-            </picture>
-            <ul class="nav__list">
-                <a href="../../index.html">
-                    <li class="nav__item">Home</li>
-                </a>
-                <a href="./youtube.html">
-                    <li class="nav__item">Youtube</li>
-                </a>
-                <a href="./aboutMe.html">
-                    <li class="nav__item">About</li>
-                </a>
-                <a href="./portfolio.html">
-                    <li class="nav__item active">Portfolio</li>
-                </a>
-                <a href="./contactMe.html">
-                    <li class="nav__item">Contact</li>
-                </a>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark nav">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../../index.html"> <img src="../images/mainLogo.png" alt="brand logo"
+                        class="nav__logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./youtube.html">Youtube</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./aboutMe.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contactMe.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
         <!-- nav ends -->
     </header>
@@ -50,7 +57,7 @@
                         <img src="../images/project.jpg" class="card-img-top" alt="project image">
                         <div class="card-body">
                             <h5 class="card-title">React JS</h5>
-                            <p class="card-text">Project created with for a Start Up</p>
+                            <p class="card-text">Project created with React Js for a Start Up</p>
                             <a href="#" class="btn btn-secondary">Github</a>
                         </div>
                     </div>
@@ -59,8 +66,8 @@
                     <div class="card">
                         <img src="../images/project.jpg" class="card-img-top" alt="project image">
                         <div class="card-body">
-                            <h5 class="card-title">React JS</h5>
-                            <p class="card-text">Project created with for a Start Up</p>
+                            <h5 class="card-title">Bootstrap V5</h5>
+                            <p class="card-text">Project created with Bootstrap for a local brand</p>
                             <a href="#" class="btn btn-secondary">Github</a>
                         </div>
                     </div>
@@ -69,8 +76,8 @@
                     <div class="card">
                         <img src="../images/project.jpg" class="card-img-top" alt="project image">
                         <div class="card-body">
-                            <h5 class="card-title">React JS</h5>
-                            <p class="card-text">Project created with for a Start Up</p>
+                            <h5 class="card-title">Wordpress</h5>
+                            <p class="card-text">Project created with Wordpress for an Entrepreneur</p>
                             <a href="#" class="btn btn-secondary">Github</a>
                         </div>
                     </div>
@@ -80,8 +87,8 @@
                         <div class="card">
                             <img src="../images/project.jpg" class="card-img-top" alt="project image">
                             <div class="card-body">
-                                <h5 class="card-title">React JS</h5>
-                                <p class="card-text">Project created with for a Start Up</p>
+                                <h5 class="card-title">Tailwind</h5>
+                                <p class="card-text">Project created with Tailwind for a Small Business</p>
                                 <a href="#" class="btn btn-secondary">Github</a>
                             </div>
                         </div>
@@ -90,8 +97,8 @@
                         <div class="card">
                             <img src="../images/project.jpg" class="card-img-top" alt="project image">
                             <div class="card-body">
-                                <h5 class="card-title">React JS</h5>
-                                <p class="card-text">Project created with for a Start Up</p>
+                                <h5 class="card-title">Material UI</h5>
+                                <p class="card-text">Project created with Material UI for my Personal Portfolio</p>
                                 <a href="#" class="btn btn-secondary">Github</a>
                             </div>
                         </div>
@@ -100,8 +107,8 @@
                         <div class="card">
                             <img src="../images/project.jpg" class="card-img-top" alt="project image">
                             <div class="card-body">
-                                <h5 class="card-title">React JS</h5>
-                                <p class="card-text">Project created with for a Start Up</p>
+                                <h5 class="card-title">Graph QL</h5>
+                                <p class="card-text">Project created with Graph QL for the community</p>
                                 <a href="#" class="btn btn-secondary">Github</a>
                             </div>
                         </div>
