--- a/assets/pages/youtube.html
+++ b/assets/pages/youtube.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/20515f5324.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon">
+    <!-- bootstrap v5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Road To Dev</title>
 </head>
@@ -14,31 +17,39 @@
 <body>
     <header class="index">
         <!-- nav start -->
-        <nav class="nav">
-            <picture class="nav__logo">
-                <a href="../../index.html"><img src="../images/mainLogo.png" alt="brand logo"></a>
-            </picture>
-            <ul class="nav__list">
-                <a href="../../index.html">
-                    <li class="nav__item">Home</li>
-                </a>
-                <a href="./youtube.html">
-                    <li class="nav__item active">Youtube</li>
-                </a>
-                <a href="./aboutMe.html">
-                    <li class="nav__item">About</li>
-                </a>
-                <a href="./portfolio.html">
-                    <li class="nav__item">Portfolio</li>
-                </a>
-                <a href="./contactMe.html">
-                    <li class="nav__item">Contact</li>
-                </a>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark nav">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../../index.html"> <img src="../images/mainLogo.png" alt="brand logo"
+                        class="nav__logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./youtube.html">Youtube</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./aboutMe.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contactMe.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
         <!-- nav ends -->
     </header>
     <!-- youtube start -->
+
     <main class="youtube">
         <section class="youtube__container">
             <h1 class="youtube__title">My latest video</h1>
@@ -48,10 +59,78 @@
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-            <a href="https://www.youtube.com/channel/UC7vy0CAiR7Sh6h4OS7pA7JA/featured" class="youtube__btn">Open on
+            <a class="btn btn-secondary mt-5" href="https://www.youtube.com/channel/UC7vy0CAiR7Sh6h4OS7pA7JA/featured"
+                role="button">Open on
                 Youtube</a>
         </section>
     </main>
+    <!-- bootstrap video cards -->
+    <div class="container video-cards">
+        <div class="row">
+            <div class="col-md-6 p-4">
+                <div class="card">
+                    <div class="card-image">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="yt-frame" src="https://www.youtube.com/embed/aohimZWy-gg"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div><!-- card image -->
+                    <div class="card-content">
+                        <p class="card-title text-center p-3">How to use custom properties CSS</p>
+                    </div><!-- card content -->
+                </div>
+            </div>
+            <div class="col-md-6 p-4">
+                <div class="card">
+                    <div class="card-image">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="yt-frame" src="https://www.youtube.com/embed/aohimZWy-gg"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div><!-- card image -->
+                    <div class="card-content">
+                        <p class="card-title text-center p-3">Creating Landing Page using SASS</p>
+                    </div><!-- card content -->
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 p-4">
+                <div class="card">
+                    <div class="card-image">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="yt-frame" src="https://www.youtube.com/embed/aohimZWy-gg"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div><!-- card image -->
+                        <div class="card-content">
+                            <p class="card-title text-center p-3">Building functional calculator with JS</p>
+                        </div><!-- card content -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 p-4">
+                <div class="card">
+                    <div class="card-image">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="yt-frame" src="https://www.youtube.com/embed/aohimZWy-gg"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div><!-- card image -->
+                    <div class="card-content">
+                        <p class="card-title text-center p-3">Responsive Portfolio with REACT</p>
+                    </div><!-- card content -->
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- youtube end -->
     <!-- footer start -->
     <footer class="index">
@@ -65,6 +144,10 @@
         </section>
     </footer>
     <!-- footer end -->
+    <!-- bootstrap v5 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
