--- a/assets/pages/aboutMe.html
+++ b/assets/pages/aboutMe.html
@@ -7,50 +7,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/20515f5324.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon">
+    <!-- bootstrap v5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Road To Dev</title>
 </head>
 
 <body>
     <header class="index">
-        <nav class="nav">
-            <picture class="nav__logo">
-                <a href="../../index.html"><img src="../images/mainLogo.png" alt="brand logo"></a>
-            </picture>
-            <ul class="nav__list">
-                <a href="../../index.html">
-                    <li class="nav__item">Home</li>
-                </a>
-                <a href="./youtube.html">
-                    <li class="nav__item">Youtube</li>
-                </a>
-                <a href="./aboutMe.html">
-                    <li class="nav__item active">About</li>
-                </a>
-                <a href="./portfolio.html">
-                    <li class="nav__item">Portfolio</li>
-                </a>
-                <a href="./contactMe.html">
-                    <li class="nav__item">Contact</li>
-                </a>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark nav">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../../index.html"> <img src="../images/mainLogo.png" alt="brand logo"
+                        class="nav__logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./youtube.html">Youtube</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./aboutMe.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contactMe.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main class="about">
-        <section class="about">
-            <div class="about__content">
-                <h1 class="about__title">Who am I?</h1>
-                <p class="about__text">I'm a Front end developer who loves to apply esthetic designs and functional code
-                </p>
-                <p class="about__text">to bring to life amazing user experiences that people can enjoy</p>
-                <p class="about__text">I always seek to colaborate in projects that takes me out of my comfort zone
-                    leveling
-                    up my skills while giving my 100%</p>
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
+                <div class="col-12 col-lg-5">
+                    <h2 class="display-4 lh-1 mb-4 text-center about-title">
+                        Who am I?
+                    </h2>
+                    <p class="lead text-center about-text">I'm a Front end developer who loves to apply esthetic designs
+                        and
+                        functional code
+                        to bring to life amazing user experiences that people can enjoy
+                        I always seek to colaborate in projects that takes me out of my comfort zone leveling up my
+                        skills while giving my 100%</p>
+                </div>
+                <div class="col-sm-8 col-md-6">
+                    <img src="../images/pp.jpeg" alt="image of a very good looking man" class="img-fluid about-image">
+                </div>
             </div>
-            <div class="about__image">
-                <img src="../images/pp.jpeg" alt="profile photo">
-            </div>
-        </section>
+        </div>
     </main>
     <footer class="index">
         <section class="footer">
@@ -62,6 +76,10 @@
             </div>
         </section>
     </footer>
+    <!-- bootstrap v5 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
