--- a/assets/pages/contactMe.html
+++ b/assets/pages/contactMe.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/20515f5324.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon">
+    <!-- bootstrap v5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Road To Dev</title>
 </head>
@@ -14,71 +17,71 @@
 <body>
     <header class="index">
         <!-- nav start -->
-        <nav class="nav">
-            <picture class="nav__logo">
-                <a href="../../index.html"><img src="../images/mainLogo.png" alt="brand logo"></a>
-            </picture>
-            <ul class="nav__list">
-                <a href="../../index.html">
-                    <li class="nav__item">Home</li>
-                </a>
-                <a href="./youtube.html">
-                    <li class="nav__item">Youtube</li>
-                </a>
-                <a href="./aboutMe.html">
-                    <li class="nav__item">About</li>
-                </a>
-                <a href="./portfolio.html">
-                    <li class="nav__item">Portfolio</li>
-                </a>
-                <a href="./contactMe.html">
-                    <li class="nav__item active">Contact</li>
-                </a>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark nav">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../../index.html"> <img src="../images/mainLogo.png" alt="brand logo"
+                        class="nav__logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./youtube.html">Youtube</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./aboutMe.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contactMe.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
         <!-- nav ends -->
     </header>
 
     <!-- contact me start -->
-    <h2 class="contact__title">Let's get in touch</h2>
     <main class="contact">
-        <form>
-            <div class="wrapper">
-                <!-- first name start-->
-                <div class="box">
-                    <input class="field" type="text" name="fistName" id="firstName">
-                    <label for="firstName">First Name</label>
-                </div>
-                <!-- first name ends -->
-                <!-- last name start-->
-                <div class="box">
-                    <input class="field" type="text" name="lastName" id="lastName">
-                    <label for="lastName">Last Name</label>
-                </div>
-                <!-- last name ends -->
-            </div>
-            <div class="wrapper">
-                <!-- email start-->
-                <div class="box">
-                    <input class="field" type="email" name="email" id="email">
-                    <label for="email">Email</label>
-                </div>
-                <!-- email ends -->
-                <!-- last name start-->
-                <div class="box">
-                    <input class="field" type="tel" name="phoneNumber" id="phoneNumber">
-                    <label for="phoneNumber">Mobile</label>
-                </div>
-                <!-- last name ends -->
-            </div>
-            <div class="warapper">
-                <div class="box">
-                    <textarea class="field" id="message" cols="30" rows="10"></textarea>
-                    <label class="messageLabel" for="message">Type your message here...</label>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <form>
+                        <div class="mb-3 mt-5">
+                            <label for="exampleInputEmail1" class="form-label">First Name</label>
+                            <input type="text" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">First Name</div>
+                        </div>
+                        <div class="mb-3 mt-5">
+                            <label for="exampleInputEmail1" class="form-label">Last Name</label>
+                            <input type="text" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">Last Name</div>
+                        </div>
+                        <div class="mb-3 mt-5">
+                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">Leave your contact email</div>
+                        </div>
+                        <div class="mb-3 form-check mt-5">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">I agree with the terms</label>
+                        </div>
+                        <button type="submit" class="btn btn-secondary mt-4">Submit</button>
+                    </form>
                 </div>
             </div>
-            <input class="contact__btn" type="submit" name="" value="Send">
-        </form>
+        </div>
     </main>
     <!-- contact me end -->
     <!-- footer start -->
@@ -93,6 +96,10 @@
         </section>
     </footer>
     <!-- footer end -->
+    <!-- bootstrap v5 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
