--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="index">
         <nav class="navbar navbar-expand-lg navbar-dark nav">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"> <img src="./assets/images/mainLogo.png" alt="brand logo"
+                <a class="navbar-brand" href="./index.html"> <img src="./assets/images/mainLogo.png" alt="brand logo"
                         class="nav__logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
