--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -5,13 +5,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- meta description -->
+    <meta name="description"
+        content="Take a look at the projects that I've build as a passionate front end developer and also some of my side projects">
+    <!-- meta keywords -->
+    <meta name="keywords" content="programming projects, websites, code projects, gallery, portfolio, web, frontend">
+    <!-- font awesome -->
     <script src="https://kit.fontawesome.com/20515f5324.js" crossorigin="anonymous"></script>
+    <!-- favicon -->
     <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon">
     <!-- bootstrap v5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css" />
-    <title>Road To Dev</title>
+    <link rel="stylesheet" href="../css/secondary.css" />
+    <title>Road To Dev || Portfolio</title>
 </head>
 
 <body>
@@ -28,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="../../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./youtube.html">Youtube</a>
@@ -37,7 +44,7 @@
                             <a class="nav-link" href="./aboutMe.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                            <a class="nav-link active" href="./portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contactMe.html">Contact</a>
