--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- meta description -->
+    <meta name="description"
+        content="This is a website of a front end developer where you can find all the projects that I've worked on and the skills and technologies I've used throughout the time">
+    <!-- meta keywords -->
+    <meta name="keywords" content="programming, development, code, web development, portfolio, web, frontend">
+    <!-- font awesome -->
     <script src="https://kit.fontawesome.com/20515f5324.js" crossorigin="anonymous"></script>
+    <!-- favicon -->
     <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
     <!-- bootstrap v5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <title>Road To Dev</title>
+    <title>Road To Dev || Sigue mi ruta hacia front end developer</title>
 </head>
 
 <body class="index">
