--- a/assets/pages/contactMe.html
+++ b/assets/pages/contactMe.html
@@ -10,6 +10,8 @@
     <!-- meta keywords -->
     <meta name="keywords"
         content="programming, development, website price, code, web development, portfolio, web, frontend, project">
+    <!-- meta autor -->
+    <meta name="author" content="ANTONIO DEL HIERRO">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/20515f5324.js" crossorigin="anonymous"></script>
     <!-- favicon -->
@@ -17,6 +19,8 @@
     <!-- bootstrap v5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- css and preload -->
+    <link rel="preload" href="../css/main.css" as="style">
     <link rel="stylesheet" href="../css/main.css" />
     <title>Road To Dev || Let's get in touch</title>
 </head>
