--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         content="This is a website of a front end developer where you can find all the projects that I've worked on and the skills and technologies I've used throughout the time">
     <!-- meta keywords -->
     <meta name="keywords" content="programming, development, code, web development, portfolio, web, frontend">
+    <!-- meta autor -->
+    <meta name="author" content="ANTONIO DEL HIERRO">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/20515f5324.js" crossorigin="anonymous"></script>
     <!-- favicon -->
@@ -17,8 +19,10 @@
     <!-- bootstrap v5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/main.css" />
-    <title>Road To Dev || Sigue mi ruta hacia front end developer</title>
+    <!-- css and preload -->
+    <link rel="preload" href="../css/main.css" as="style">
+    <link rel="stylesheet" href="../css/main.css" />
+    <title>Road To Dev || My road to developer</title>
 </head>
 
 <body class="index">
