--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- css and preload -->
     <link rel="preload" href="../css/main.css" as="style">
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
     <title>Road To Dev || My road to developer</title>
 </head>
 
