--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     <!-- aside start -->
     <aside class="index">
         <section class="socials">
-            <a href="https://www.linkedin.com/in/antonio-de-jesus-del-hierro-montes-0635a8208/" target="_blank"> <img
+            <a href="https://www.linkedin.com/in/delhierroantonio/" target="_blank"> <img
                     src="./assets/icons/logotipo-de-linkedin.png" alt="linkedin icon" class="social__icon"></a>
-            <a href="https://www.linkedin.com/in/antonio-de-jesus-del-hierro-montes-0635a8208/" target="_blank"><img
-                    src="./assets/icons/github.png" alt="github icon" class="social__icon"></a>
+            <a href="https://github.com/delhierroantonio" target="_blank"><img src="./assets/icons/github.png"
+                    alt="github icon" class="social__icon"></a>
             <a href="#"><img src="./assets/icons/instagram.png" alt="instagram icon" class="social__icon"></a>
 
         </section>
